tests/failing/generic_lambda_exec_mismatch.rgo
int: @/int
str: @/str
exit: @/exit

foo: <T>(x:T, y:T, ok:()){
    ok
}

done: (){
    exit(0)
}

foo(1, "bad", done)
